www/profile/app-profile.less
/*
 * SPDX-FileCopyrightText: 2023 XWiki CryptPad Team <contact@cryptpad.org> and contributors
 *
 * SPDX-License-Identifier: AGPL-3.0-or-later
 */

@import (reference) '../../customize/src/less2/include/framework.less';
@import (reference) '../../customize/src/less2/include/sidebar-layout.less';

&.cp-app-profile {

    .framework_min_main();
    .sidebar-layout_main();

    @cp-profile-is-your-friend: @cp_profile-hint;

    display: flex;
    flex-flow: column;

    #cp-sidebarlayout-leftside {
        display: none !important;
    }

    #cp-app-profile-header {
        display: flex;
        #cp-app-profile-rightside {
            flex: 1;
            display: flex;
            flex-flow: column;
            align-items: start;
        }
    }
    #cp-app-profile-avatar {
        width: 300px;
        //height: 350px;
        margin: 10px;
        margin-right: 20px;
        text-align: center;
        &> span {
            display: inline-block;
            text-align: center;
            height: 300px;
            width: 300px;
            border: 1px solid @cp_profile-border;
            border-radius: 4px;
            overflow: hidden;
            position: relative;
            .cp-app-profile-avatar-delete {
                right: 0;
                position: absolute;
                opacity: 0.7;
                &:hover {
                    opacity: 1;
                }
            }
        }
        img {
            max-width: 100%;
            max-height: 100%;
            vertical-align: top;
        }
        media-tag {
            height: 100%;
            width: 100%;
            display: inline-flex;
            justify-content: center;
            align-items: center;
            img {
                min-width: 100%;
                min-height: 100%;
                max-width: none;
                max-height: none;
                flex: 1;
            }
        }
        button {
            min-width: 40px;
            height: 40px;
            margin: 5px !important;
        }
    }
    .cp-app-profile-resizer {
        text-align: center;
    }
    #cp-app-profile-displayname, #cp-app-profile-link {
        margin: 10px 0;
        input {
            width: 100%;
            font-size: 20px;
            box-sizing: border-box;
            padding-right: 30px;
        }
        input:focus ~ .edit {
            display: none;
        }
        .cp-app-profile-input-edit {
            position: absolute;
            margin-left: -25px;
            margin-top: 8px;
        }
        .cp-app-profile-input-temp {
            font-weight: 400;
            font-family: sans-serif;
        }
        .cp-app-profile-displayname {
            font-weight: bold;
            font-size: 30px;
        }
        .cp-app-profile-link {
            font-size: 25px;
            vertical-align: middle;
        }
        .cp-app-profile-displayname, .cp-app-profile-link {
            line-height: 40px;
        }
        .cp-app-profile-link-code {
            display: none;
            min-width: 500px;
            input {
                flex: 1;
                min-width: 0;
            }
            button {
                height: 38px !important;
            }
        }
        & > button:empty {
            margin-left: 25px !important;
        }
    }

    .cp-app-profile-friend {
        display: flex;
        align-items: center;
        color: @cp-profile-is-your-friend;
        .fa {
            margin-right: 0.2em;
        }
    }
    .cp-app-profile-friend-request {
        flex: 0;
        margin-top: 10px;
    }

    // I tried using flexbox but messed with how the pencil icon was displayed
    #cp-app-profile-invite-button {
        float: right;
    }
    .cp-app-profile-viewprofile-button {
        margin-bottom: 5px !important;
    }
    #cp-app-profile-description {
        position: relative;
        font-size: 16px;
        margin-bottom: 20px;
        .cp-app-profile-description-code {
            display: none;
        }
        .cp-app-profile-description-rendered {
            border: 1px solid @cp_profile-border;
            padding: 0 15px;
            &:empty {
                display: none;
            }
        }
        .cp-app-profile-description-ok, .cp-app-profile-description-spin {
            position: absolute;
            bottom: 2px;
            right: 2px;
            display: none;
            z-index: 1000;
        }
        textarea {
            width: 100%;
            height: 300px;
        }
        .CodeMirror {
            font-family: monospace;
            font-size: 16px;
            line-height: initial;
            pre {
                margin: 0;
                font-family: inherit;
                font-size: inherit;
                line-height: inherit;
            }
        }
    }
    #cp-app-profile-create {
        height: 100%;
        display: flex;
        flex-flow: column;
        align-items: center;
        justify-content: center;
    }
    .cp-app-profile-mute-container {
        margin-top: 5px;
        p {
            margin-top: 5px;
            font-size: 13px;
        }
    }
}

